--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Vuforia</string>
     <string name="app_description">Vuforia Sample Applications</string>
     <string name="button_start">Start</string>
-    <string name="activities_list_title_string">Homework 3</string>
+    <string name="activities_list_title_string">VirTrack</string>
     <string name="activities_list_empty">No activities</string>
     <string name="button_OK">OK</string>
     <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
