--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Vuforia</string>
-    <string name="app_description">Vuforia Sample Applications</string>
+    <string name="app_name">VirTrack</string>
+    <string name="app_description">AR application built in Vuforia</string>
     <string name="button_start">Start</string>
     <string name="activities_list_title_string">VirTrack</string>
     <string name="activities_list_empty">No activities</string>
@@ -29,7 +29,7 @@
     <string name="overlay_build_target_help">Hold the device parallel to the target</string>
     <string name="target_quality_error_title">Low Quality Image</string>
     <string name="target_quality_error_desc">The image has very little detail, please try another.</string>
-    <string name="menu_back">Vuforia Samples</string>
+    <string name="menu_back">VirTrack</string>
     <string name="menu_extended_tracking">Extended Tracking</string>
     <string name="menu_character_mode">Character Mode</string>
     <string name="menu_flash">Flash</string>
